Added /portfolio html page and controller. Preparing to import database items/rows to display the user's holdings.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
 <body>
 
     <input type="text" id="Name" name="Name">
-    <button type="button" onclick="alert('You have logged in.')">Login</button>
+    <a href="/portfolio">Login</a>
 
 </body>
 </html>
