Modified some files to handle user stock requests. It is not quite complete. I also created the file for testing services. Next on my list.

--- a/src/main/resources/templates/portfolio.html
+++ b/src/main/resources/templates/portfolio.html
@@ -6,7 +6,26 @@
 </head>
 <body>
 
-<p>Portfolio page. List elements?</p>
+<script>
+    function loadData() {
+        var table = Document.getElementById("table")
+
+        table.
+    }
+</script>
+
+<table id = "table">
+    <tr>
+        <th>Ticker</th>
+        <th>Buy Price</th>
+        <th>Shares</th>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+</table>
 
 </body>
 </html>
