--- a/src/main/resources/templates/portfolio.html
+++ b/src/main/resources/templates/portfolio.html
@@ -96,8 +96,6 @@
             })
                 .then(response => response.json())
                 .then(response => console.log(JSON.stringify(response)))
-
-            //window.alert(tickerField.toString() + priceField.toString() + sharesField.toString())
         }
 
         /*
@@ -124,6 +122,11 @@
         <th>Ticker</th>
         <th>Buy Price</th>
         <th>Shares</th>
+    </tr>
+    <tr th:each="stock : ${stocks}">
+        <td th:text="${stock.ticker}"></td>
+        <td th:text="${stock.ticker}"></td>
+        <td th:text="${stock.ticker}"></td>
     </tr>
 </table>
 
