--- a/src/main/resources/templates/portfolio.html
+++ b/src/main/resources/templates/portfolio.html
@@ -96,6 +96,12 @@
             })
                 .then(response => response.json())
                 .then(response => console.log(JSON.stringify(response)))
+
+            //window.location.reload()
+
+            setTimeout(function(){
+                window.location.reload();
+            }, 200);
         }
 
         /*
