Added more user service testing. More crappy path tests. I modified UserService's createUser function accordingly. I also fixed the portfolio html template to grab the correct parameters to display on the user's portfolio.

--- a/src/main/resources/templates/portfolio.html
+++ b/src/main/resources/templates/portfolio.html
@@ -131,8 +131,8 @@
     </tr>
     <tr th:each="stock : ${stocks}">
         <td th:text="${stock.ticker}"></td>
-        <td th:text="${stock.ticker}"></td>
-        <td th:text="${stock.ticker}"></td>
+        <td th:text="${stock.buyPrice}"></td>
+        <td th:text="${stock.shares}"></td>
     </tr>
 </table>
 
