Added a logout button and a logout page that invalidates the session. Added more user tests

--- a/src/main/resources/templates/portfolio.html
+++ b/src/main/resources/templates/portfolio.html
@@ -136,6 +136,8 @@
     </tr>
 </table>
 
+<a href="/logout">Logout</a>
+
 <!-- Trigger/Open The Modal -->
 <button id="myBtn">Open Modal</button>
 
