Changed navigation items because they were incorrect.

--- a/src/main/resources/templates/portfolio.html
+++ b/src/main/resources/templates/portfolio.html
@@ -141,7 +141,7 @@
 
 <header>
     <div class="header">
-        <a class="brand" href="#"><img width="200px" th:src="@{/images/logo.png}"></a>
+        <a class="brand" href="/logout"><img width="200px" th:src="@{/images/logo.png}"></a>
         <nav class="nav">
             <ol>
                 <li class="crumb"><a href="/logout">Logout</a></li>
