--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,10 +51,10 @@
 <!--Header resource https://ishadeed.com/article/website-headers-flexbox/ -->
 <header>
     <div class="header">
-        <a class="brand" href="#"><img width="200px" th:src="@{/images/logo.png}"></a>
+        <a class="brand" href="/"><img width="200px" th:src="@{/images/logo.png}"></a>
         <nav class="nav">
             <ol>
-                <li class="crumb"><a href="#">Home</a></li>
+                <li class="crumb"><a href="/">Home</a></li>
                 <li class="crumb"><a href="/login">Login</a></li>
             </ol>
         </nav>
