--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -32,10 +32,10 @@
 
 <header>
     <div class="header">
-        <a class="brand" href="#"><img width="200px" th:src="@{/images/logo.png}"></a>
+        <a class="brand" href="/"><img width="200px" th:src="@{/images/logo.png}"></a>
         <nav class="nav">
             <ol>
-                <li class="crumb"><a href="#">Home</a></li>
+                <li class="crumb"><a href="/">Home</a></li>
                 <li class="crumb"><a href="/login">Login</a></li>
             </ol>
         </nav>
