Added more unit tests to the User Service (comprehensive) and modified some templates.

--- a/src/main/resources/templates/portfolio.html
+++ b/src/main/resources/templates/portfolio.html
@@ -83,7 +83,7 @@
                 modal.style.display = "block";
             }
 
-            // When the user clicks on <span> (x), close the modal
+            // When the user clicks on (x), close the modal
             span.onclick = function() {
                 modal.style.display = "none";
             }
@@ -168,7 +168,7 @@
 
 <!--Code below copied from the link at the top of this template.-->
 <!-- Trigger/Open The Modal -->
-<button id="myBtn">Insert Stock Prosition</button>
+<button id="myBtn">Insert Stock Position</button>
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
